--- a/index.html
+++ b/index.html
@@ -3,21 +3,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>Rebecca Parker</title>
-        <link rel="stylesheet" type="text/css" href="style.css" />
+     <!--   <link rel="stylesheet" type="text/css" href="style.css" />-->
     </head>
     <body>
         <div class="bigBox">
 
-            <!--#include virtual="top.html" -->
-
-
+            
              <div id="image">
-                <img src="my_images/10.jpg" alt="picture of Rebecca Parker" />
+                <img src="images/lindaCai.jpg" />
             </div>
-            <!--<div class="content">
-                <p></p>
-            </div>-->
+
             <div id="digiWork">
+                
                 <ul id="headingIndex">
                     <!--<li><b>Email:</b> rjp396@gmail.com</li>-->
                     <li><a href="https://github.com/lindaCai1997" target="_blank"><b>GitHub</b></a></li>
