--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Rebecca Parker</title>
-     <!--   <link rel="stylesheet" type="text/css" href="style.css" />-->
+        <title>Linda Cai</title>
+    <!--    <link rel="stylesheet" type="text/css" href="style.css" /> -->
     </head>
     <body>
         <div class="bigBox">
-
-            
-             <div id="image">
+             <div id="image" style="width:40%;">
                 <img src="images/lindaCai.jpg" />
             </div>
 
