--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>Linda Cai</title>
-    <!--    <link rel="stylesheet" type="text/css" href="style.css" /> -->
+        <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
         <div class="bigBox">
-             <div id="image" style="width:40%;">
+             <div id="image">
                 <img src="images/lindaCai.jpg" />
             </div>
 
             <div id="digiWork">
-                
-                <ul id="headingIndex">
-                    <!--<li><b>Email:</b> rjp396@gmail.com</li>-->
+
+                <!-- <ul id="headingIndex">
+                    <li><b>Email:</b> rjp396@gmail.com</li>
                     <li><a href="https://github.com/lindaCai1997" target="_blank"><b>GitHub</b></a></li>
-                </ul>
+                </ul> --> 
+                <p> I am currently a first year MS student at Princeton University. 
+                    I am interested algorithmic game theory, approximation algorithms, graph algorithms, and theoretical computer science in general.
+                    Before grad school I studied computer science and mathematics at UIUC. </p>
                 <!--<h3>Digital Projects &amp; Websites Created</h3>-->
                 <p><a id="nell" href="http://nelson.newtfire.org/" target="_blank">The Restoration
                         of Nell Nelson</a><!-- (A Digital Archive)--></p>
