--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
                 <p> I am currently a first year MS student at Princeton University. 
                     I am interested algorithmic game theory, approximation algorithms, graph algorithms, and theoretical computer science in general.
                     Before grad school I studied computer science and mathematics at UIUC. </p>
+                <p> This page is currently still under construction, should be up in a few days!</p>
                 <!--<h3>Digital Projects &amp; Websites Created</h3>-->
-                <p><a id="nell" href="http://nelson.newtfire.org/" target="_blank">The Restoration
-                        of Nell Nelson</a><!-- (A Digital Archive)--></p>
+                <!-- <p><a id="nell" href="http://nelson.newtfire.org/" target="_blank">The Restoration
+                        of Nell Nelson</a></p>
 						<br />
                 <p><a id="WOVarchive" href="https://wovdighistory.psc.edu/" target="_blank">West
                         Overton Museums Digital Archive</a></p>
@@ -32,17 +33,17 @@
                 <br />
                 <p><a id="cheap" href="./HEL_Project/cheap.html" target="_blank">A Comprehensive
                         History of a Single Word ---
-                    CHEAP</a><!-- (Created for the Pitt-Greensburg History of the English
-                    Language course)--></p>
-                <br />
+                    CHEAP</a></p>
+                <br /> -->
                 <!--<p><a id="persBlog" href="https://agenda2rescue.wordpress.com/" target="_blank">Personal
                         Essays and Vlogs</a><!-\- (Created for the Pitt-Greensburg Digital Storytelling
                     course)-\-></p>
                 <br/>-->
+                <!--
                 <p><a id="STDchap" href="http://www.pitt.edu/~upgstd/" target="_blank">ΑΑΔ Chapter
                         of Sigma Tau Delta Website</a>
                     <br /> (Created for Pitt-Greensburg's English Honor Society)</p>
-                
+                -->
 
             </div>
             <!--#include virtual="foot.html" -->
