--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
+    <div class="top">
+            <b>Linda Cai"</b>
+        </div>
         <div class="bigBox">
-             <div id="image">
+            <div id="image">
                 <img src="images/lindaCai.jpg" />
             </div>
-
+            
             <div id="digiWork">
 
                 <!-- <ul id="headingIndex">
