--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="bigBox">
 
             <div id="image">
-                <img src="images/lindaCai.jpg" />
+                <img src="images/rocks.png" />
             </div>
             <div id="digiWork">
 
@@ -26,7 +26,10 @@
                     <li><b>Email:</b> rjp396@gmail.com</li>
                     <li><a href="https://github.com/lindaCai1997" target="_blank"><b>GitHub</b></a></li>
                 </ul> --> 
-                <p> I am currently a second year master student in Computer Science at Princeton University, where I am fortunate to be advised by <a href="https://www.cs.princeton.edu/~smattw/">Matt Weinberg</a>. My research interest include algorithmic game theory, approximation algorithms, graph algorithms, and theoretical computer science in general. Prior to joining Princeton, I graduated from University of Illinois at Urbana Champaign with a BS in Computer Science and a BSLAS in Math. </p>
+                <p> I am currently a second year master student in Computer Science at Princeton University, where I am fortunate to be advised by <a href="https://www.cs.princeton.edu/~smattw/">Matt Weinberg</a>. My research interest include algorithmic game theory, approximation algorithms, graph algorithms, and theoretical computer science in general. 
+                </p>
+                <p class="intro">    
+                Prior to joining Princeton, I graduated from University of Illinois at Urbana Champaign with a BS in Computer Science and a BSLAS in Math. </p>
 
                 <h2> Papers </h2>
                 In submission asking for permission...
