--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="bigBox">
 
             <div id="image">
-                <img src="images/google_crop.jpg" />
+                <img src="images/young.jpg" />
             </div>
             <div id="digiWork">
 
