--- a/index.html
+++ b/index.html
@@ -26,13 +26,21 @@
                     <li><b>Email:</b> rjp396@gmail.com</li>
                     <li><a href="https://github.com/lindaCai1997" target="_blank"><b>GitHub</b></a></li>
                 </ul> --> 
-                <p> I am currently a second year master student in Computer Science at Princeton University, where I am fortunate to be advised by <a href="https://www.cs.princeton.edu/~smattw/">Matt Weinberg</a>. My research interest include algorithmic game theory, approximation algorithms, graph algorithms, and theoretical computer science in general. 
+                <p> I am currently first year PhD student in Computer Science at Princeton University, where I am fortunate to be advised by <a href="https://www.cs.princeton.edu/~smattw/">Matt Weinberg</a>. My research interest include algorithmic game theory, approximation algorithms, graph algorithms, and theoretical computer science in general. 
                 </p>
                 <p class="intro">    
                 Prior to joining Princeton, I graduated with <a href="https://digital.library.illinois.edu/collections/81101fb0-e3fb-012f-c5b6-0019b9e633c5-5">University Honors</a> from University of Illinois at Urbana Champaign with a BS in Computer Science and a BSLAS in Mathematics. </p>
 
                 <h2> Recent Research Projects </h2>
                 <ul class="TA">
+                    <li class="wide">
+                    <a href="https://arxiv.org/abs/2105.08292">99% Revenue with Constant Enhanced Competition.</a><br />
+
+                    Linda Cai, Raghuvansh R. Saxena.<br />
+
+                    <i>In Proceedings of The Twenty-Second ACM Conference on Economics and Computation (EC), 2021.</i>
+                    </li>
+
                     <li class="wide">
                     <a href="https://arxiv.org/abs/1910.04342">Implementation in Advised Strategies: Welfare Guarantees from Posted-Price Mechanisms when Demand Queries are NP-hard.</a><br />
 
