--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
                 <p id="TAIntro">I have TA'd for the following courses at Princeton University: </p>
                 <ul class="TA">
                     <li class="narrow">
-                    COS 445 - <a href="https://www.cs.princeton.edu/~smattw/Teaching/cos445sp19.htm">Economics and Computing</a>, Spring 2020.
+                        COS 521 - <a href="https://www.cs.princeton.edu/~smattw/Teaching/cos521fa21.htm">Advanced Algorithms Design</a>, Fall 2021.
+                    </li>
+                    <li class="narrow">
+                    COS 445 - <a href="https://www.cs.princeton.edu/~smattw/Teaching/cos445sp20.htm">Economics and Computing</a>, Spring 2020.
                     </li>
                    <li class="narrow">
                     COS 451 - <a href="https://www.cs.princeton.edu/courses/archive/fall19/cos451/">Computational Geometry</a>, Fall 2019. 
