--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li class="wide">
                         <a href="https://arxiv.org/abs/1910.04406">The Short-Side Advantage in Random Matching Markets. </a> <br />
                         
-                        Linda Cai, Clayton Thomas.
+                        Linda Cai, Clayton Thomas. <br />
     
                         <i>In Proceedings of the SIAM Symposium on Simplicity in Algorithms (SOSA), 2022.</i>
                     </li>
