--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p class="intro">    
                 Prior to joining Princeton, I graduated with <a href="https://digital.library.illinois.edu/collections/81101fb0-e3fb-012f-c5b6-0019b9e633c5-5">University Honors</a> from University of Illinois at Urbana Champaign with a BS in Computer Science and a BSLAS in Mathematics. </p>
 
-                <p class="intro">Here is my <a href="Linda_Cai_CV_Fall2022.pdf">CV</a>.</p>
+                <p class="intro">Here is my <a href="Linda_Cai_CV_Spring2023.pdf">CV</a>.</p>
 
                 <h2> Recent Research Projects </h2>
                 <h3> Theoretical Computer Science </h3>
