--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                 <p class="intro">Here is my <a href="Linda_Cai_CV_Spring2023.pdf">CV</a>.</p>
 
-                <h2> Recent Research Projects </h2>
+                <h2> Conference Publications </h2>
                 <h3> Theoretical Computer Science </h3>
                 <ul class="TA">
                     <li class="wide">
@@ -76,6 +76,15 @@
     
                         <i>In Proceedings of ACM Symposium on Cloud Computing (SOCC), 2020.</i>
                         </li>
+                </ul>
+
+                <h2> Survey Papers</h2>
+                <ul class="TA"> 
+                    <li class="wide">
+                        <a href="https://www.sigecom.org/exchanges/volume_21/1/BEYHAGHI.pdf"> Recent Developments in Pandora’s Box Problem: Variants and Applications.</a> <br />
+                        Hedyeh Beyhaghi, Linda Cai. <br />
+                        <i> SIGecom Exchanges Vol. 21.1, 2023.</i>
+                    </li>
                 </ul>
                 
                 <h2> Teaching Experiences</h2>
