--- a/index.html
+++ b/index.html
@@ -26,15 +26,14 @@
                     <li><b>Email:</b> rjp396@gmail.com</li>
                     <li><a href="https://github.com/lindaCai1997" target="_blank"><b>GitHub</b></a></li>
                 </ul> --> 
-                <p> I am currently a third year PhD student in Computer Science at Princeton University (where I also got my Master's degree), and I am fortunate to be advised by <a href="https://www.cs.princeton.edu/~smattw/">Matt Weinberg</a>. My research interest include algorithmic game theory, approximation algorithms, graph algorithms, and theoretical computer science in general. 
+                <p> I am currently a third year PhD student in Computer Science at Princeton University (where I also got my Master's degree), and I am fortunate to be advised by <a href="https://www.cs.princeton.edu/~smattw/">Matt Weinberg</a>. I work on a broad set of problems that relate to online optimization, incentive, learning, and their intersection. 
                 </p>
                 <p class="intro">    
                 Prior to joining Princeton, I graduated with <a href="https://digital.library.illinois.edu/collections/81101fb0-e3fb-012f-c5b6-0019b9e633c5-5">University Honors</a> from University of Illinois at Urbana Champaign with a BS in Computer Science and a BSLAS in Mathematics. </p>
 
-                <p class="intro">Here is my <a href="Linda_Cai_CV_Spring2023.pdf">CV</a>.</p>
+                <p class="intro">Here is my <a href="Linda_Cai_CV.pdf">CV</a>.</p>
 
                 <h2> Conference Publications </h2>
-                <h3> Theoretical Computer Science </h3>
                 <ul class="TA">
                     <li class="wide">
                         <a href="https://arxiv.org/abs/2212.01524">Pandora's Problem with Nonobligatory Inspection: Optimal Structure and a PTAS. </a> <br />
@@ -67,7 +66,6 @@
                     </li>
                 </ul>
 
-                <h3> Distributed Systems </h3>
                 <ul class="TA"> 
                     <li class="wide">
                         <a href="https://dl.acm.org/doi/10.1145/3419111.3421302"> Baechi: fast device placement of machine learning graphs.</a><br />
