--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                     <li><b>Email:</b> rjp396@gmail.com</li>
                     <li><a href="https://github.com/lindaCai1997" target="_blank"><b>GitHub</b></a></li>
                 </ul> --> 
-                <p class="intro"> I am currently a postdoctoral researcher at UC Berkeley, where I am fortunate to be hosted by <a href= "https://people.eecs.berkeley.edu/~jordan/">Michael I. Jordan </a>. I work on a broad set of problems that relate to online optimization, incentive, learning, and their intersection. </p>
+                <p class="intro"> I am currently a postdoctoral researcher at UC Berkeley, where I am fortunate to be hosted by <a href="https://people.eecs.berkeley.edu/~jordan/">Michael I. Jordan</a>. I work on a broad set of problems that relate to online optimization, incentive, learning, and their intersection. </p>
 
-                <p class="intro"> Prior to joining Berkeley, I was a PhD student in Computer Science at Princeton University (where I also got my Master's degree), advised by <a href="https://www.cs.princeton.edu/~smattw/">Matt Weinberg</a>. Prior to my PhD, I graduated with <a href="https://digital.library.illinois.edu/collections/81101fb0-e3fb-012f-c5b6-0019b9e633c5-5">University Honors</a> from University of Illinois at Urbana Champaign with a BS in Computer Science and a BSLAS in Mathematics. </p>
+                <p class="intro"> Prior to joining Berkeley, I was a PhD student in Computer Science at Princeton University (where I also got my Master's degree), and I was fortunate to be advised by <a href="https://www.cs.princeton.edu/~smattw/">Matt Weinberg</a>. Prior to my PhD, I graduated with <a href="https://digital.library.illinois.edu/collections/81101fb0-e3fb-012f-c5b6-0019b9e633c5-5">University Honors</a> from University of Illinois at Urbana Champaign with a BS in Computer Science and a BSLAS in Mathematics. </p>
 
                 <p class="intro">Here is my <a href="source_files/Linda_Cai_CV.pdf">CV</a>.</p>
 
