update poster and code

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                         <a href="https://www.arxiv.org/abs/2507.12453">Cost-aware Stopping for Bayesian Optimization</a> <br />
                         
                         Qian Xie*, Linda Cai*, Alexander Terenin, Peter I. Frazier, Ziv Scully. <br />
-    
-                        <i>In submission to the 14th International Conference on Learning Representations (ICLR), 2026.</i>
+                        <i>In submission. Preliminary version accepted to AutoML 2025, Non-archival Track. </i>
+                        <a href="source_files/AutoML_Stopping_poster.pdf">[poster]</a> &nbsp; <a href="https://github.com/QianJaneXie/CostAwareStoppingBayesOpt">[code]</a>
                     </li>
                     <li class="wide paper" data-tags="incentives">
                         <a href="https://www.arxiv.org/abs/2506.09291">Competition Complexity in Multi-Item Auctions: Beyond VCG and Regularity</a> <br />
