Add local preview instructions

--- a/index.html
+++ b/index.html
@@ -67,16 +67,20 @@
 
 
     <body>
-    <div class="title"> 
-            Linda Cai
-        <div class="affiliation">
-            <p>Electrical Engineering & Computer Sciences, UC Berkeley</p>
-            <p>tcai@berkeley.edu</p>
+        <div class="title">
+                Linda Cai
+            <div class="affiliation">
+                <p>Electrical Engineering & Computer Sciences, UC Berkeley</p>
+                <p>tcai@berkeley.edu</p>
+            </div>
+            <hr id="line" color="#003000">
         </div>
-        <hr id="line" color="#003000">
-    </div>
 
-    </div>
+        <nav class="site-nav">
+            <a href="index.html">Main</a>
+            <a href="#blogs">Blogs</a>
+        </nav>
+
         <div class="bigBox">
             
             <div id="image">
@@ -270,9 +274,12 @@
                     <br /> (Created for Pitt-Greensburg's English Honor Society)</p>
                 -->
 
+                <h2 id="blogs">Blogs</h2>
+                <p class="intro">Blog posts and updates are coming soon.</p>
+
             </div>
             <!--#include virtual="foot.html" -->
-            
+
         </div>
     </body>
 </html>
