--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div id="digiWork">
                 <p class="intro"> I am currently a postdoctoral researcher at UC Berkeley, where I am fortunate to be hosted by <a href="https://people.eecs.berkeley.edu/~jordan/">Michael I. Jordan</a>. I have historically worked on a broad set of problems that relate to online optimization, incentive, learning, and their intersection. </p>
                     
-                <p class="intro"> Recently, I have been excited about <b>improving efficiency and reliability across the machine learning pipeline</b> (which I think is especially important for generative ai, blog coming soon!) In the first year of my postdoc, I have explored several topics along this line, including <a href="papers.html#diffusion">diffusion inference</a>, <a href="papers.html#cost-aware-stopping"> hyperparameter tuning</a>, and data attribution (upcoming). </p>
+                <p class="intro"> Recently, I have been excited about <b>improving efficiency and reliability across the machine learning pipeline</b> (which I think is especially important for generative ai, blog coming soon!) In the first year of my postdoc, I have explored several topics along this line, including <a href="https://arxiv.org/abs/2406.00924">diffusion inference</a>, <a href="https://www.arxiv.org/abs/2507.12453"> hyperparameter tuning</a>, and data attribution (upcoming). </p>
                 <!-- (And here [blog link] is why I think these are especially important for generative ai) -->
                
 
