--- a/service.html
+++ b/service.html
@@ -39,12 +39,12 @@
                         During my PhD, I served as the point of contact at Princeton for <a href="https://www.cs.princeton.edu/~smattw/masters/masters.html">this crowdsourced spreadsheet</a> that provides basic information about master’s programs in theoretical computer science — it was also how I first got started in research. 
                     </li>
                     <li class="wide">
-                        Like many people, I have served as a reviewer for various conferences and journals, including EC, STOC, SODA, ITCS, WINE and Operations Research. I have yet to serve on a huge conference like NeurIPS or ICLR, it seems pretty dramatic! 
+                        I have served as a reviewer for various conferences and journals, including EC, STOC, SODA, ITCS, WINE and Operations Research. I have yet to serve on a huge conference like NeurIPS or ICLR, it seems pretty dramatic! 
                     </li>
                 </ul>
 
                 <h2>Teaching</h2>
-                <p id="TAIntro">I have TA'd for the following courses at Princeton University. For more high level courses, I generally like to give students a space on the board to collaborate, and they bared needed me! </p> 
+                <p id="TAIntro">I have TA'd for the following courses at Princeton University. For more advanced courses, I generally like to give students a space on the board to collaborate, and they barely needed me! </p> 
                 <ul class="TA">
                     <li class="narrow">
                         COS 521 - <a href="https://www.cs.princeton.edu/~smattw/Teaching/cos521fa21.htm">Advanced Algorithms Design</a>, Fall 2021. 
