update service page

--- a/service.html
+++ b/service.html
@@ -32,7 +32,7 @@
                 <h2>Service</h2>
                 <ul class="TA">
                     <li class="wide">
-                        After COVID, I helped bring back the beloved Gems of TCS Reading Group and Theory Lunch at Princeton. 
+                        After COVID, I helped bring back the beloved Gems of TCS Reading Group and <a href="https://theory.cs.princeton.edu/theorylunch/">Theory Lunch</a> at Princeton. 
                         <!-- Gems of TCS is a student and postdoc only space where we share a paper we’re excited about or workshop early research ideas in a low-pressure setting. Theory Lunch brings in invited speakers, and we get the chance to chat with them one-on-one or over lunch or dinner afterward. Both also come with free food =) -->
                     </li>
                     <li class="wide">
