--- a/papers.html
+++ b/papers.html
@@ -32,9 +32,9 @@
                 <h2> Ongoing Work and Preprints </h2>
                 <ul class="TA">
                     <li class="wide paper" id="data-attribution">
-                        Task-Specific Data Selection via Sparse Autoencoders <br />
-                        Linda Cai*, Xinyan Hu*, Alex Pan*, Michael I. Jordan, Jacob Steinhardt. <br />
-                        <i>Ongoing work.</i>
+                        Scalable Gradient-Based Attribution of LLM Behaviors <br />
+                        Linda Cai*, Xinyan Hu*, Alex Pan*, Socrates Osorio, Pratyay Pandey, Michael I. Jordan, Jacob Steinhardt. <br />
+                        <i>Ongoing work. Preprint available upon request!</i>
                     </li>
                     <li class="wide paper" id="cost-aware-stopping" data-tags="machine-learning">
                         <a href="https://www.arxiv.org/abs/2507.12453">Cost-aware Stopping for Bayesian Optimization</a> <br />
