update code link

--- a/papers.html
+++ b/papers.html
@@ -34,7 +34,7 @@
                     <li class="wide paper" id="data-attribution">
                         Scalable Gradient-Based Attribution of LLM Behaviors <br />
                         Linda Cai*, Xinyan Hu*, Alex Pan*, Socrates Osorio, Pratyay Pandey, Michael I. Jordan, Jacob Steinhardt. <br />
-                        <i>Ongoing work. Preprint available upon request!</i>
+                        <i>Ongoing work. Preprint available upon request!</i> <a href="https://github.com/lindaCai1997/data-attribution">[code]</a>
                     </li>
                     <li class="wide paper" id="cost-aware-stopping" data-tags="machine-learning">
                         <a href="https://www.arxiv.org/abs/2507.12453">Cost-aware Stopping for Bayesian Optimization</a> <br />
